# whis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPER_HANDOFF.md  README.md  SELF_HOSTED.md  justfile
crates/whis-core/: Cargo.toml  README.md
crates/whis-core/src/: audio.rs  clipboard.rs  config.rs  lib.rs  model.rs  ollama.rs  output_style.rs  polish.rs  preset.rs  resample.rs  settings.rs  transcribe.rs  vad.rs  verbose.rs
crates/whis-core/src/audio/: chunker.rs  devices.rs  mod.rs  types.rs
crates/whis-core/src/audio/encoder/: embedded.rs  ffmpeg.rs  mod.rs
crates/whis-core/src/audio/loader/: file.rs  mod.rs  stdin.rs
crates/whis-core/src/audio/recorder/: config.rs  mod.rs  processor.rs  stream.rs
crates/whis-core/src/audio/vad/: mod.rs  processor.rs  processor_noop.rs
crates/whis-core/src/configuration/: defaults.rs  provider.rs
crates/whis-core/src/model/: download.rs  mod.rs  parakeet.rs  types.rs  whisper.rs
crates/whis-core/src/provider/: deepgram_realtime.rs  local_parakeet.rs  local_whisper.rs  mod.rs  openai_realtime.rs  realtime.rs  remote_whisper.rs
crates/whis-core/src/provider/base/: mod.rs  openai_compatible.rs
crates/whis-core/src/settings/: mod.rs  post_processing.rs  services.rs  store_adapter.rs  transcription.rs  ui.rs
crates/whis-core/src/transcription/: mod.rs  ollama_manager.rs  post_processing.rs  transcribe.rs
crates/whis-desktop/: Cargo.toml  tauri.conf.json
crates/whis-desktop/capabilities/: default.json
crates/whis-desktop/src/: commands.rs  lib.rs  main.rs  shortcuts.rs  state.rs  tray.rs
crates/whis-desktop/src/bubble/: events.rs  window.rs
crates/whis-desktop/src/commands/: bubble.rs  mod.rs  ollama.rs  presets.rs  recording.rs  settings.rs  shortcuts.rs  system.rs  validation.rs
crates/whis-desktop/src/commands/models/: downloads.rs  mod.rs  parakeet.rs  whisper.rs
crates/whis-desktop/src/recording/: config.rs  control.rs  mod.rs  pipeline.rs
crates/whis-desktop/src/shortcuts/: backend.rs  ipc.rs  manual.rs  mod.rs  rdev_grab.rs  tauri_plugin.rs
crates/whis-desktop/src/shortcuts/portal/: binding.rs  dconf.rs  mod.rs  registry.rs
crates/whis-desktop/src/tray/: events.rs  icons.rs  menu.rs  mod.rs  setup.rs
crates/whis-desktop/ui/: package.json  vite.config.ts
crates/whis-desktop/ui/src/: App.vue  types.ts
crates/whis-desktop/ui/src/bubble/: BubbleApp.vue
crates/whis-desktop/ui/src/components/: CommandBlock.vue  DirectCaptureSetup.vue  ManualShortcutSetup.vue  PortalShortcutBind.vue  ShortcutInput.vue  ShortcutTabs.vue  SystemShortcutConfig.vue
crates/whis-desktop/ui/src/composables/: useKeyboardCapture.ts  useParakeetModel.ts  useWhisperModel.ts
crates/whis-desktop/ui/src/stores/: settings.ts
crates/whis-desktop/ui/src/utils/: constants.ts  keys.ts
(+124 files in other folders)
